cleaned up html on secret-number-game.html

--- a/secret-number-game.html
+++ b/secret-number-game.html
@@ -19,21 +19,19 @@
             </nav>
         </div>
     <br>
-    <div>
     <main>
-    <br>
     <div>
-            <header>
+        <header>
             <h2>Secret Number Game!</h2> 
-            </header> 
+        </header> 
          </div> 
          <br> 
-         <div class="somepadding" id="backgroundchange">
-         <h3>Can you guess my secret number?</h3>  
-         <script src="secret-number-game.js"></script>
-            </div>
+    <div class="somepadding" id="backgroundchange">
+        <h3>Can you guess my secret number?</h3>  
+        <script src="secret-number-game.js"></script>
+    </div>
     <br>
-<nav id="side-nav">
+        <nav id="side-nav">
             <ul>
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="quotes.html">JavaScript Basics</a></li>
@@ -50,13 +48,14 @@
                 <li><a href="">Assignment 15</a></li>
                 <li><a href="">Assignment 16</a></li>
             </ul>
-            </nav>
-                <div>
-                </main>
+        </nav>
+    </main>
            
-                            <footer id="quotefooter">
-                            <p><span>	
-                                &copy; 2025 Omar Brown | Contact: 000-000-0000 | <a href="mailto:omar@brown.com">
-                                    
-</a></span></p> </body>
+        <footer id="quotefooter">
+            <p>
+            <span>	
+                &copy; 2025 Omar Brown | Contact: 000-000-0000 | <a href="mailto:omar@brown.com"></a>
+            </span>
+            </p>
+</body>
 </html>
