--- a/secret-number-game.html
+++ b/secret-number-game.html
@@ -24,38 +24,38 @@
         <header>
             <h2>Secret Number Game!</h2> 
         </header> 
-         </div> 
-         <br> 
+    </div> 
+    <br> 
     <div class="somepadding" id="backgroundchange">
         <h3>Can you guess my secret number?</h3>  
         <script src="secret-number-game.js"></script>
     </div>
     <br>
-        <nav id="side-nav">
-            <ul>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="quotes.html">JavaScript Basics</a></li>
-                <li><a href="secret-number-game.html">Loops and Conditionals</a></li>
-                <li><a href="">Assignment 6</a></li>
-                <li><a href="">Assignment 7</a></li>
-                <li><a href="">Assignment 8</a></li>
-                <li><a href="">Assignment 9</a></li>
-                <li><a href="">Assignment 10</a></li>
-                <li><a href="">Assignment 11</a></li>
-                <li><a href="">Assignment 12</a></li>
-                <li><a href="">Assignment 13</a></li>
-                <li><a href="">Assignment 14</a></li> 
-                <li><a href="">Assignment 15</a></li>
-                <li><a href="">Assignment 16</a></li>
-            </ul>
-        </nav>
-    </main>
-           
+    <nav id="side-nav">
+        <ul>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="quotes.html">JavaScript Basics</a></li>
+            <li><a href="secret-number-game.html">Loops and Conditionals</a></li>
+            <li><a href="">Assignment 6</a></li>
+            <li><a href="">Assignment 7</a></li>
+            <li><a href="">Assignment 8</a></li>
+            <li><a href="">Assignment 9</a></li>
+            <li><a href="">Assignment 10</a></li>
+            <li><a href="">Assignment 11</a></li>
+            <li><a href="">Assignment 12</a></li>
+            <li><a href="">Assignment 13</a></li>
+            <li><a href="">Assignment 14</a></li> 
+            <li><a href="">Assignment 15</a></li>
+            <li><a href="">Assignment 16</a></li>
+        </ul>
+    </nav>
+    </main>   
         <footer id="quotefooter">
             <p>
             <span>	
                 &copy; 2025 Omar Brown | Contact: 000-000-0000 | <a href="mailto:omar@brown.com"></a>
             </span>
             </p>
+        </footer>
 </body>
 </html>
