--- a/secret-number-game.html
+++ b/secret-number-game.html
@@ -27,7 +27,7 @@
     </div> 
     <br> 
     <div class="somepadding" id="backgroundchange">
-        <h3>Can you guess my secret number?</h3>  
+        <h3>I guess you guessed it!</h3>  
         <script src="secret-number-game.js"></script>
     </div>
     <br>
