initializing quiz game setup

--- a/quiz.html
+++ b/quiz.html
@@ -1,15 +1,61 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Omar Brown">
+        <title>Secret Number Game</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-
+        <div>
+            <nav id="top-nav">
+            <ul>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="test.html">Test Page</a></li>
+                <li><a href="quotes.html">Quotes</a></li>
+                <li><a href="www.google.com">Google</a></li>
+            </ul>
+            </nav>
+        </div>
+    <br>
     <main>
-
-    </main>
-    </body>
-    <footer>
-        
-    </footer>
+    <div>
+        <header>
+            <h2>Quiz Time!</h2> 
+        </header> 
+    </div> 
+    <br> 
+    <div class="somepadding" id="backgroundchange">
+        <h3>Time for a Quick Quiz...</h3>  
+        <script src="quiz.html"></script>
+    </div>
+    <br>
+    <nav id="side-nav">
+        <ul>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="quotes.html">JavaScript Basics</a></li>
+            <li><a href="secret-number-game.html">Loops and Conditionals</a></li>
+            <li><a href="quiz.html">Functions</a></li>
+            <li><a href="">Assignment 7</a></li>
+            <li><a href="">Assignment 8</a></li>
+            <li><a href="">Assignment 9</a></li>
+            <li><a href="">Assignment 10</a></li>
+            <li><a href="">Assignment 11</a></li>
+            <li><a href="">Assignment 12</a></li>
+            <li><a href="">Assignment 13</a></li>
+            <li><a href="">Assignment 14</a></li> 
+            <li><a href="">Assignment 15</a></li>
+            <li><a href="">Assignment 16</a></li>
+        </ul>
+    </nav>
+    </main>   
+        <footer id="quotefooter">
+            <p>
+            <span>	
+                &copy; 2025 Omar Brown | Contact: 000-000-0000 | <a href="mailto:omar@brown.com"></a>
+            </span>
+            </p>
+        </footer>
+</body>
 </html>
