--- a/secret-number-game.html
+++ b/secret-number-game.html
@@ -36,7 +36,7 @@
             <li><a href="/index.html">Home</a></li>
             <li><a href="quotes.html">JavaScript Basics</a></li>
             <li><a href="secret-number-game.html">Loops and Conditionals</a></li>
-            <li><a href="">Assignment 6</a></li>
+            <li><a href="quiz.html">Functions</a></li>
             <li><a href="">Assignment 7</a></li>
             <li><a href="">Assignment 8</a></li>
             <li><a href="">Assignment 9</a></li>
