--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Omar Brown">
-        <title>Secret Number Game</title>
+        <title>Quiz Game</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -28,7 +28,7 @@
     <br> 
     <div class="somepadding" id="backgroundchange">
         <h3>Time for a Quick Quiz...</h3>  
-        <script src="quiz.html"></script>
+        <script src="quiz.js"></script>
     </div>
     <br>
     <nav id="side-nav">
