--- a/quiz.html
+++ b/quiz.html
@@ -50,7 +50,7 @@
         </ul>
     </nav>
     </main>   
-        <footer id="quotefooter">
+        <footer>
             <p>
             <span>	
                 &copy; 2025 Omar Brown | Contact: 000-000-0000 | <a href="mailto:omar@brown.com"></a>
