for and while loop updates

--- a/quiz.html
+++ b/quiz.html
@@ -27,7 +27,7 @@
     </div> 
     <br> 
     <div class="somepadding" id="backgroundchange">
-        <h3>Time for a Quick Quiz...</h3>  
+        <h3>Let's see how you did...</h3>  
         <script src="quiz.js"></script>
     </div>
     <br>
