moved last line to inside loop and added break statement and fixed html

--- a/quiz.html
+++ b/quiz.html
@@ -27,7 +27,7 @@
     </div> 
     <br> 
     <div class="somepadding" id="backgroundchange">
-        <h3>Let's see how you did...</h3>  
+        <h2>Trivia Quiz</h2>  
         <script src="quiz.js"></script>
     </div>
     <br>
