created new lesson files and updated side nav for all html files

--- a/quiz.html
+++ b/quiz.html
@@ -37,7 +37,7 @@
             <li><a href="quotes.html">JavaScript Basics</a></li>
             <li><a href="secret-number-game.html">Loops and Conditionals</a></li>
             <li><a href="quiz.html">Functions</a></li>
-            <li><a href="">Assignment 7</a></li>
+            <li><a href="trivia.html">Strings, Numbers, Dates and Regular Expressions</a></li>
             <li><a href="">Assignment 8</a></li>
             <li><a href="">Assignment 9</a></li>
             <li><a href="">Assignment 10</a></li>
