--- a/trivia.html
+++ b/trivia.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Omar Brown">
-        <title>Secret Number Game</title>
+        <title>Trivia Game</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -22,13 +22,13 @@
     <main>
     <div>
         <header>
-            <h2>Secret Number Game!</h2> 
+            <h2>Trivia Time!</h2> 
         </header> 
     </div> 
     <br> 
     <div class="somepadding" id="backgroundchange">
-        <h3>I guess you guessed it!</h3>  
-        <script src="secret-number-game.js"></script>
+        <h2>Trivia Quiz</h2>  
+        <script src="quiz.js"></script>
     </div>
     <br>
     <nav id="side-nav">
@@ -50,7 +50,7 @@
         </ul>
     </nav>
     </main>   
-        <footer id="quotefooter">
+        <footer>
             <p>
             <span>	
                 &copy; 2025 Omar Brown | Contact: 000-000-0000 | <a href="mailto:omar@brown.com"></a>
