created trivia.js and edited trivia.html to include it

--- a/trivia.html
+++ b/trivia.html
@@ -28,7 +28,7 @@
     <br> 
     <div class="somepadding" id="backgroundchange">
         <h2>Trivia Quiz</h2>  
-        <script src="quiz.js"></script>
+        <script src="trivia.js"></script>
     </div>
     <br>
     <nav id="side-nav">
