--- a/quiz.html
+++ b/quiz.html
@@ -33,20 +33,18 @@
     <br>
     <nav id="side-nav">
         <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="quotes.html">JavaScript Basics</a></li>
-            <li><a href="secret-number-game.html">Loops and Conditionals</a></li>
-            <li><a href="quiz.html">Functions</a></li>
-            <li><a href="trivia.html">Strings, Numbers, Dates and Regular Expressions</a></li>
-            <li><a href="">Assignment 8</a></li>
-            <li><a href="">Assignment 9</a></li>
-            <li><a href="">Assignment 10</a></li>
-            <li><a href="">Assignment 11</a></li>
-            <li><a href="">Assignment 12</a></li>
-            <li><a href="">Assignment 13</a></li>
-            <li><a href="">Assignment 14</a></li> 
-            <li><a href="">Assignment 15</a></li>
-            <li><a href="">Assignment 16</a></li>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="quotes.html">JavaScript Basics</a></li>
+			<li><a href="secret-number-game.html">Loops and Conditionals</a></li>
+			<li><a href="quiz.html">Functions</a></li>
+			<li><a href="trivia.html">Strings, Numbers, Dates and Regular Expressions</a></li>
+			<li><a href="game.html">Integrating JavaScript</a></li>
+			<li><a href="jquery-intro/jq">Intro to JQuery</a></li>
+			<li><a href="index.html">jQuery Events</a></li>
+			<li><a href="index.html">Traversing the DOM</a></li>
+			<li><a href="index.html">jQuery Images</a></li>
+			<li><a href="index.html">jQuery Form Validation</a></li>
+			<li><a href="index.html">Assignment 13</a></li>
         </ul>
     </nav>
     </main>   
