updated the navigation links to include new jQuery-related pages and an assignment.

--- a/quotes.html
+++ b/quotes.html
@@ -26,7 +26,7 @@
 			    <li><a href="quiz.html">Functions</a></li>
 			    <li><a href="trivia.html">Strings, Numbers, Dates and Regular Expressions</a></li>
 			    <li><a href="game.html">Integrating JavaScript</a></li>
-			    <li><a href="jquery-intro/jq">Intro to JQuery</a></li>
+			    <li><a href="jquery-intro/jquery-intro.html">Intro to JQuery</a></li>
 			    <li><a href="index.html">jQuery Events</a></li>
 			    <li><a href="index.html">Traversing the DOM</a></li>
 			    <li><a href="index.html">jQuery Images</a></li>
