--- a/jquery-intro/jquery-intro.html
+++ b/jquery-intro/jquery-intro.html
@@ -7,7 +7,12 @@
     <meta name="viewport" content="width=device-width; initial-scale=1.0">
     <link href="js.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/jquery-intro/jquery-intro.js"></script>
+    <script src="/jquery-intro/jquery-intro.js">
+      $(function() {
+        // jQuery code goes here
+        
+      });
+    </script>
   </head>
 
   <body>
