--- a/jquery-intro/jquery-intro.html
+++ b/jquery-intro/jquery-intro.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Intro to jQuery</title>
-    <meta name="viewport" content="width=device-width; initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="js.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="jquery-intro.js"></script>
