--- a/jquery-events/glossary.html
+++ b/jquery-events/glossary.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Patti's Bed of Blooms Glossary</title>
-    <meta name="viewport" content="width=device-width; initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="glossary.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
