--- a/jquery-events/glossary.html
+++ b/jquery-events/glossary.html
@@ -185,6 +185,7 @@
       <div id="rose" class="imgdiv"><img src="rose.jpg" alt="rose" width="100"></div>
       <div id="mum" class="imgdiv"><img src="yellow_pompom_mum.jpg" alt="mum" width="100"></div>
       <div id="coneflower" class="imgdiv"><img src="coneflower.jpg" alt="coneflower" width="100"></div>
+    </div>
   </body>
 
 </html>
