--- a/jquery-effects/effects.html
+++ b/jquery-effects/effects.html
@@ -6,7 +6,7 @@
     <title>jQuery Animation and Effects</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="effects.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 	</head>
 
@@ -36,11 +36,11 @@
 
         <div id="newsletter">
           <p><a href="#" id="signuplink"><span id="openclose">+</span> Sign up for our newsletter</a></p>
-          <form name="newsSignup" method="post" action="thanks.html" id="newsSignup">
-            <label>Name: <input type="text" name="uname"></label>
-            <label>Email address: <input type="email" name="email"></label>
-            <input type="submit" value="Sign Up">
-          </form>
+            <form name="newsSignup" method="post" action="thanks.html" id="newsSignup">
+             <label>Name: <input type="text" name="uname"></label>
+             <label>Email address: <input type="email" name="email"></label>
+             <input type="submit" value="Sign Up">
+            </form>
         </div>
 
 				<footer>
