--- a/jquery-effects/effects.html
+++ b/jquery-effects/effects.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="effects.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="effects.js"></script>
 
 	</head>
 
@@ -47,7 +48,7 @@
 					<hr>
 					<p>Brookhaven College WebDev</p>
 				</footer>
-
+        <img id="rose" src="rose.jpg" alt="Rose">
 			</div>
     </div>
   </body>
