final commit ....i think

--- a/jquery-effects/effects.html
+++ b/jquery-effects/effects.html
@@ -33,14 +33,14 @@
             <li>mums, pansies and kale in fall and winter.</li>
           </ul>
         </div>
-        <p><a href="#">Order seasonal color for your garden</a></p>
+        <p><a href="#thanks" id="test">Order seasonal color for your garden</a></p>
 
         <div id="newsletter">
           <p><a href="#" id="signuplink"><span id="openclose">+</span> Sign up for our newsletter</a></p>
             <form name="newsSignup" method="post" action="thanks.html" id="newsSignup">
              <label>Name: <input type="text" name="uname"></label>
              <label>Email address: <input type="email" name="email"></label>
-             <input type="submit" value="Sign Up">
+             <input type="submit" value="Sign Up" id="submitBtn">
             </form>
         </div>
 
