local preview is terrible ugh....gotta commit to see where i am

--- a/jquery-dom/shopping.html
+++ b/jquery-dom/shopping.html
@@ -4,10 +4,11 @@
   <head>
     <meta charset="utf-8">
     <title>jQuery Shopping Cart</title>
-    <meta name="viewport" content="width=device-width; initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="shopping.css" rel="stylesheet">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="shopping.js"></script>
 
   </head>
 
