adding to side nav to index for now will fix all other indexes eventually

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 				<li><a href="trivia.html">Strings, Numbers, Dates and Regular Expressions</a></li>
 				<li><a href="game.html">Integrating JavaScript</a></li>
 				<li><a href="jquery-intro/jquery-intro.html">Intro to JQuery</a></li>
-				<li><a href="index.html">jQuery Events</a></li>
-				<li><a href="index.html">Traversing the DOM</a></li>
+				<li><a href="jquery-events/glossary.html">jQuery Events</a></li>
+				<li><a href="jquery-dom/shopping.html">Traversing the DOM</a></li>
 				<li><a href="index.html">jQuery Images</a></li>
 				<li><a href="index.html">jQuery Form Validation</a></li>
 				<li><a href="index.html">Assignment 13</a></li>
