--- a/jquery-images/gallery.html
+++ b/jquery-images/gallery.html
@@ -8,6 +8,7 @@
 		<link href="gallery.css" rel="stylesheet">
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
+		<script src="gallery.js"></script>
 
 	</head>
 
