added images to homepage side nav

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<li><a href="jquery-intro/jquery-intro.html">Intro to JQuery</a></li>
 				<li><a href="jquery-events/glossary.html">jQuery Events</a></li>
 				<li><a href="jquery-dom/shopping.html">Traversing the DOM</a></li>
-				<li><a href="index.html">jQuery Images</a></li>
+				<li><a href="jquery-images/gallery.html">jQuery Images</a></li>
 				<li><a href="index.html">jQuery Form Validation</a></li>
 				<li><a href="index.html">Assignment 13</a></li>
         	</ul>
