--- a/jquery-orderform/orderform.html
+++ b/jquery-orderform/orderform.html
@@ -7,8 +7,8 @@
     <title>JavaScript Form Validation</title>
     <link href="https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel="stylesheet">
     <link href="orderform.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script>src = "orderform.js"</script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src = "orderform.js"></script>
 
 	</head>
 
