--- a/jquery-orderform/orderform.html
+++ b/jquery-orderform/orderform.html
@@ -7,7 +7,7 @@
     <title>JavaScript Form Validation</title>
     <link href="https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel="stylesheet">
     <link href="orderform.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src = "orderform.js"></script>
 
 	</head>
