--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 		<div>
 			<nav id="top-nav">
 			<ul>
-				<li><a href="/index.html">Home</a></li>
-				<li><a href="test.html">Test Page</a></li>
-				<li><a href="quotes.html">Quotes Page</a></li>
+				<li><a href="/index.html">Home</a> |</li>
+				<li><a href="test.html">Test Page</a> |</li>
+				<li><a href="quotes.html">Quotes Page</a> |</li>
 				<li><a href="www.google.com">Google</a></li>
 			</ul>
 			</nav>
@@ -49,7 +49,7 @@
 		<div>
 			<span>
 			<picture>
-			<img src="images/picture.jpg" alt="boat and rainbow" aria-label="boat and rainbow">
+			<img src="images/picture.jpg" alt="boat and rainbow" height = "300" width = "400">
 			</picture>
 			</span>
 		</div>
