fixed html formatting

--- a/about.html
+++ b/about.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,51 +12,55 @@
     <header>
         <h1>About Us</h1>
         <div>
-        <nav id="top-nav">
-			<ul>
-				<li><a href="/index.html">Home</a> |</li>
-				<li><a href="test.html">Test Page</a> |</li>
-				<li><a href="quotes.html">Quotes Page</a> |</li>
-				<li><a href="www.google.com">Google</a></li>
-			</ul>
-		</nav>
+            <nav id="top-nav">
+                <ul>
+                    <li><a href="/index.html">Home</a> |</li>
+                    <li><a href="test.html">Test Page</a> |</li>
+                    <li><a href="quotes.html">Quotes Page</a> |</li>
+                    <li><a href="www.google.com">Google</a></li>
+                </ul>
+            </nav>
+        </div>
         <div>
-        <nav id="side-nav">
-			<ul>
-				<li><a href="index.html">Home</a>
-				<li><a href="quotes.html">JavaScript Basics</a>
-				<li><a href="secret-number-game.html">Loops and Conditionals</a>
-				<li><a href="quiz.html">Functions</a>
-				<li><a href="trivia.html">Strings, Numbers, Dates and Regular Expressions</a>
-				<li><a href="game.html">Integrating JavaScript</a>
-				<li><a href="jquery-intro/jquery-intro.html">Intro to JQuery</a>
-				<li><a href="jquery-events/glossary.html">jQuery Events</a>
-				<li><a href="jquery-dom/shopping.html">Traversing the DOM</a>
-				<li><a href="jquery-images/gallery.html">jQuery Images</a>
-				<li><a href="jquery-orderform/jquery-orderform.html">jQuery Form Validation</a>
-				<li><a href="about.html">Assignment 13</a>
-        	</ul>
-		</nav>
+            <nav id="side-nav">
+                <ul>
+                    <li><a href="index.html">Home</a>
+                    <li><a href="quotes.html">JavaScript Basics</a>
+                    <li><a href="secret-number-game.html">Loops and Conditionals</a>
+                    <li><a href="quiz.html">Functions</a>
+                    <li><a href="trivia.html">Strings, Numbers, Dates and Regular Expressions</a>
+                    <li><a href="game.html">Integrating JavaScript</a>
+                    <li><a href="jquery-intro/jquery-intro.html">Intro to JQuery</a>
+                    <li><a href="jquery-events/glossary.html">jQuery Events</a>
+                    <li><a href="jquery-dom/shopping.html">Traversing the DOM</a>
+                    <li><a href="jquery-images/gallery.html">jQuery Images</a>
+                    <li><a href="jquery-orderform/jquery-orderform.html">jQuery Form Validation</a>
+                    <li><a href="about.html">Assignment 13</a>
+                </ul>
+            </nav>
         </div>
     </header>
     <div>
         <body>
             <div>
             <main>
-                <p>We have learned so much in a fairly short period of time.
-                We've learned basic HTML, CSS, a bit of JavaScript, and jQuery.
-                Below are some examples of what we've learned.</p>
                 <div>
+                    <p>We have learned so much in a fairly short period of time.
+                    We've learned basic HTML, CSS, a bit of JavaScript, and jQuery.
+                    Below are some examples of what we've learned.
+                    </p>
+                </div>
                     <h2>CSS Class and ID Example</h2>
                     <div class="somepadding" id="backgroundchange">
                         <p>I learned to use a class and an ID to style elements from the css file.
                         In this case, calling the class adds padding around the text, and formating for the backgroundchange ID changes
-                        the background color, adds a red border, and rounds the corners for any element that shares the ID.</p>
-
-                </div>
+                        the background color, adds a red border, and rounds the corners for any element that shares the ID.
+                        </p>
+                    </div>
                 <div>
                     <h2>JavaScript Scripting Basic Example</h2>
-                    <p>You can write paragraphs directly to the page:</p><script>
+                    <p>You can write paragraphs directly to the page:</p>
+                    <script>
                         document.write("<p>This paragraph was added using JavaScript's document.write() method.</p>");
                     </script>
                 </div>
@@ -87,11 +92,11 @@
 
             </main>
             </div>
-    </body>
+        </body>
+    </div>
     <footer>
         <p>&copy; 2024 Our Company</p>
     </footer>
-    </div>
 
 
 
