more formatting html

--- a/about.html
+++ b/about.html
@@ -40,8 +40,7 @@
             </nav>
         </div>
     </header>
-    <div>
-        <body>
+    <body>
             <div>
             <main>
                 <div>
@@ -92,10 +91,10 @@
 
             </main>
             </div>
-        </body>
-    </div>
+    </body>
+    
     <footer>
-        <p>&copy; 2024 Our Company</p>
+        <p>&copy; 2025 Omar Brown</p>
     </footer>
 
 
