--- a/about.html
+++ b/about.html
@@ -43,9 +43,12 @@
             <div>
             <main>
                 <div>
-                    <p>We have learned so much in a fairly short period of time.
-                    We've learned basic HTML, CSS, a bit of JavaScript, and jQuery.
-                    Below are some examples of what we've learned.
+                    <p>I learned so much in a fairly short period of time.
+                    I've learned basic HTML, CSS, a bit of JavaScript, and jQuery. I currently work as a UI/UX designer, so learning these skills
+                    formally gives me a better understanding of what is possible when designing for the web. It also helps me communicate better with developers
+                    when working on projects together. 
+                    
+                    Below are some examples of what I've learned.
                     </p>
                 </div>
                     <h2>CSS Class and ID Example</h2>
