--- a/about.html
+++ b/about.html
@@ -14,10 +14,10 @@
         <div>
             <nav id="top-nav">
                 <ul>
-                    <li><a href="/index.html">Home</a> |</li>
+                    <li><a href="index.html">Home</a> |</li>
                     <li><a href="test.html">Test Page</a> |</li>
                     <li><a href="quotes.html">Quotes Page</a> |</li>
-                    <li><a href="www.google.com">Google</a></li>
+                    <li><a href="http://www.google.com">Google</a></li>
                 </ul>
             </nav>
         </div>
