--- a/trivia.html
+++ b/trivia.html
@@ -11,10 +11,10 @@
         <div>
             <nav id="top-nav">
             <ul>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="test.html">Test Page</a></li>
                 <li><a href="quotes.html">Quotes</a></li>
-                <li><a href="www.google.com">Google</a></li>
+                <li><a href="http://www.google.com">Google</a></li>
             </ul>
             </nav>
         </div>
@@ -31,24 +31,23 @@
         <script src="trivia.js"></script>
     </div>
     <br>
-    <nav id="side-nav">
-        <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="quotes.html">JavaScript Basics</a></li>
-            <li><a href="secret-number-game.html">Loops and Conditionals</a></li>
-            <li><a href="quiz.html">Functions</a></li>
-            <li><a href="trivia.html">Strings, Numbers, Dates and Regular Expressions</a></li>
-            <li><a href="">Assignment 8</a></li>
-            <li><a href="">Assignment 9</a></li>
-            <li><a href="">Assignment 10</a></li>
-            <li><a href="">Assignment 11</a></li>
-            <li><a href="">Assignment 12</a></li>
-            <li><a href="">Assignment 13</a></li>
-            <li><a href="">Assignment 14</a></li> 
-            <li><a href="">Assignment 15</a></li>
-            <li><a href="">Assignment 16</a></li>
-        </ul>
-    </nav>
+            <nav id="side-nav">
+                <ul>
+                    <li><a href="index.html">Home</a>
+                    <li><a href="quotes.html">JavaScript Basics</a>
+                    <li><a href="secret-number-game.html">Loops and Conditionals</a>
+                    <li><a href="quiz.html">Functions</a>
+                    <li><a href="trivia.html">Strings, Numbers, Dates and Regular Expressions</a>
+                    <li><a href="game.html">Integrating JavaScript</a>
+                    <li><a href="jquery-intro/jquery-intro.html">Intro to JQuery</a>
+                    <li><a href="jquery-events/glossary.html">jQuery Events</a>
+					<li><a href="jquery-effects/effects.html">jQuery Effects and Animation</a>
+                    <li><a href="jquery-dom/shopping.html">Traversing the DOM</a>
+                    <li><a href="jquery-images/gallery.html">jQuery Images</a>
+                    <li><a href="jquery-orderform/jquery-orderform.html">jQuery Form Validation</a>
+                    <li><a href="about.html">Finalize Your Website</a>
+                </ul>
+            </nav>
     </main>   
         <footer>
             <p>
