--- a/about.html
+++ b/about.html
@@ -32,10 +32,11 @@
                     <li><a href="game.html">Integrating JavaScript</a>
                     <li><a href="jquery-intro/jquery-intro.html">Intro to JQuery</a>
                     <li><a href="jquery-events/glossary.html">jQuery Events</a>
+                    <li><a href="jquery-effects/effects.html">jQuery Effects and Animation</a>
                     <li><a href="jquery-dom/shopping.html">Traversing the DOM</a>
                     <li><a href="jquery-images/gallery.html">jQuery Images</a>
                     <li><a href="jquery-orderform/jquery-orderform.html">jQuery Form Validation</a>
-                    <li><a href="about.html">Assignment 13</a>
+                    <li><a href="about.html">Finalize Your Website</a>
                 </ul>
             </nav>
         </div>
