--- a/quotes.html
+++ b/quotes.html
@@ -11,29 +11,30 @@
         <div>
             <nav id="top-nav">
             <ul>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="test.html">Test Page</a></li>
                 <li><a href="quotes.html">Quotes</a></li>
-                <li><a href="www.google.com">Google</a></li>
+                <li><a href="http://www.google.com">Google</a></li>
             </ul>
             </nav>
         </div>
-        <nav id="side-nav">
-            <ul>
-			    <li><a href="index.html">Home</a></li>
-			    <li><a href="quotes.html">JavaScript Basics</a></li>
-			    <li><a href="secret-number-game.html">Loops and Conditionals</a></li>
-			    <li><a href="quiz.html">Functions</a></li>
-			    <li><a href="trivia.html">Strings, Numbers, Dates and Regular Expressions</a></li>
-			    <li><a href="game.html">Integrating JavaScript</a></li>
-			    <li><a href="jquery-intro/jquery-intro.html">Intro to JQuery</a></li>
-			    <li><a href="index.html">jQuery Events</a></li>
-			    <li><a href="index.html">Traversing the DOM</a></li>
-			    <li><a href="index.html">jQuery Images</a></li>
-			    <li><a href="index.html">jQuery Form Validation</a></li>
-			    <li><a href="index.html">Assignment 13</a></li>
-            </ul>
-        </nav>
+       <nav id="side-nav">
+                <ul>
+                    <li><a href="index.html">Home</a>
+                    <li><a href="quotes.html">JavaScript Basics</a>
+                    <li><a href="secret-number-game.html">Loops and Conditionals</a>
+                    <li><a href="quiz.html">Functions</a>
+                    <li><a href="trivia.html">Strings, Numbers, Dates and Regular Expressions</a>
+                    <li><a href="game.html">Integrating JavaScript</a>
+                    <li><a href="jquery-intro/jquery-intro.html">Intro to JQuery</a>
+                    <li><a href="jquery-events/glossary.html">jQuery Events</a>
+                    <li><a href="jquery-effects/effects.html">jQuery Effects and Animation</a>
+                    <li><a href="jquery-dom/shopping.html">Traversing the DOM</a>
+                    <li><a href="jquery-images/gallery.html">jQuery Images</a>
+                    <li><a href="jquery-orderform/orderform.html">jQuery Form Validation</a>
+                    <li><a href="about.html">Finalize Your Website</a>
+                </ul>
+            </nav>
     <br>
     <div>
 
